[gd_scene load_steps=5 format=3 uid="uid://m14nptntj5mp"]

[ext_resource type="Texture2D" uid="uid://x218sp1de1n0" path="res://assets/gameover.png" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://cblgv053dhwrd" path="res://scripts/ui.gd" id="1_yev5y"]
[ext_resource type="FontFile" uid="uid://cu4lf4od2owng" path="res://assets/font/FlappyBird.ttf" id="2_x4jx1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yev5y"]
bg_color = Color(0.774857, 0.551325, 0.216111, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_yev5y")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="PointLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_x4jx1")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
texture = ExtResource("1_nt7q6")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yev5y")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverBox/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/GameOverBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x4jx1")
text = "RESTART"

[node name="ExitButton" type="Button" parent="MarginContainer/GameOverBox/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x4jx1")
text = "EXIT"

[node name="RecordLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_x4jx1")
theme_override_font_sizes/font_size = 50

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
